--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 
 <body class="has-background-grey-lighter">
 
+    <h1 class="title has-text-centered">Calculateur Carre</h1>
+    <p class="subtitle has-text-centered">Sélectionnez le type de valeur que vous souhaitez entrer (arête, aire, périmètre ou diagonale)</p>
     <div class="container1">
         <div class="peri">
             <h1>Arête: </h1>
