--- a/index.html
+++ b/index.html
@@ -50,7 +50,19 @@
         
     </div>
 
+
+    <div id="modal" class="modal has-text-centered">
+        <div class="modal-background"></div>
+        <div class="modal-content">
+            <div class="box">
+                <p class="title">Entrez une valeur positive!</p>
+            </div>
+        </div>
+    </div>
+
+
     <script defer src="app.js"></script>
+    <script defer src="modal.js"></script>
 </body>
 
 </html>
